@@ -103,91 +103,91 @@ module TZInfo
           tz.transition 2007, 3, :o2, 1175205600
           tz.transition 2007, 11, :o1, 1193950800
           tz.transition 2008, 4, :o2, 1207260000
-          tz.transition 2008, 9, :o1, 1222808400
+          tz.transition 2008, 10, :o1, 1225486800
           tz.transition 2009, 4, :o2, 1238709600
-          tz.transition 2009, 9, :o1, 1254344400
+          tz.transition 2009, 10, :o1, 1257022800
           tz.transition 2010, 4, :o2, 1270159200
-          tz.transition 2010, 9, :o1, 1285880400
+          tz.transition 2010, 10, :o1, 1288558800
           tz.transition 2011, 3, :o2, 1301608800
-          tz.transition 2011, 9, :o1, 1317416400
+          tz.transition 2011, 10, :o1, 1320094800
           tz.transition 2012, 4, :o2, 1333663200
-          tz.transition 2012, 9, :o1, 1349038800
+          tz.transition 2012, 10, :o1, 1351717200
           tz.transition 2013, 4, :o2, 1365112800
-          tz.transition 2013, 9, :o1, 1380574800
+          tz.transition 2013, 10, :o1, 1383253200
           tz.transition 2014, 4, :o2, 1396562400
-          tz.transition 2014, 9, :o1, 1412110800
+          tz.transition 2014, 10, :o1, 1414789200
           tz.transition 2015, 4, :o2, 1428012000
-          tz.transition 2015, 9, :o1, 1443646800
+          tz.transition 2015, 10, :o1, 1446325200
           tz.transition 2016, 3, :o2, 1459461600
-          tz.transition 2016, 9, :o1, 1475269200
+          tz.transition 2016, 10, :o1, 1477947600
           tz.transition 2017, 4, :o2, 1491516000
-          tz.transition 2017, 9, :o1, 1506805200
+          tz.transition 2017, 10, :o1, 1509483600
           tz.transition 2018, 4, :o2, 1522965600
-          tz.transition 2018, 9, :o1, 1538341200
+          tz.transition 2018, 10, :o1, 1541019600
           tz.transition 2019, 4, :o2, 1554415200
-          tz.transition 2019, 9, :o1, 1569877200
+          tz.transition 2019, 10, :o1, 1572555600
           tz.transition 2020, 4, :o2, 1585864800
-          tz.transition 2020, 9, :o1, 1601499600
+          tz.transition 2020, 10, :o1, 1604178000
           tz.transition 2021, 4, :o2, 1617314400
-          tz.transition 2021, 9, :o1, 1633035600
+          tz.transition 2021, 10, :o1, 1635714000
           tz.transition 2022, 3, :o2, 1648764000
-          tz.transition 2022, 9, :o1, 1664571600
+          tz.transition 2022, 10, :o1, 1667250000
           tz.transition 2023, 4, :o2, 1680818400
-          tz.transition 2023, 9, :o1, 1696107600
+          tz.transition 2023, 10, :o1, 1698786000
           tz.transition 2024, 4, :o2, 1712268000
-          tz.transition 2024, 9, :o1, 1727730000
+          tz.transition 2024, 10, :o1, 1730408400
           tz.transition 2025, 4, :o2, 1743717600
-          tz.transition 2025, 9, :o1, 1759266000
+          tz.transition 2025, 10, :o1, 1761944400
           tz.transition 2026, 4, :o2, 1775167200
-          tz.transition 2026, 9, :o1, 1790802000
+          tz.transition 2026, 10, :o1, 1793480400
           tz.transition 2027, 4, :o2, 1806616800
-          tz.transition 2027, 9, :o1, 1822338000
+          tz.transition 2027, 10, :o1, 1825016400
           tz.transition 2028, 4, :o2, 1838671200
-          tz.transition 2028, 9, :o1, 1853960400
+          tz.transition 2028, 10, :o1, 1856638800
           tz.transition 2029, 4, :o2, 1870120800
-          tz.transition 2029, 9, :o1, 1885496400
+          tz.transition 2029, 10, :o1, 1888174800
           tz.transition 2030, 4, :o2, 1901570400
-          tz.transition 2030, 9, :o1, 1917032400
+          tz.transition 2030, 10, :o1, 1919710800
           tz.transition 2031, 4, :o2, 1933020000
-          tz.transition 2031, 9, :o1, 1948568400
+          tz.transition 2031, 10, :o1, 1951246800
           tz.transition 2032, 4, :o2, 1964469600
-          tz.transition 2032, 9, :o1, 1980190800
+          tz.transition 2032, 10, :o1, 1982869200
           tz.transition 2033, 3, :o2, 1995919200
-          tz.transition 2033, 9, :o1, 2011726800
+          tz.transition 2033, 10, :o1, 2014405200
           tz.transition 2034, 4, :o2, 2027973600
-          tz.transition 2034, 9, :o1, 2043262800
+          tz.transition 2034, 10, :o1, 2045941200
           tz.transition 2035, 4, :o2, 2059423200
-          tz.transition 2035, 9, :o1, 2074798800
+          tz.transition 2035, 10, :o1, 2077477200
           tz.transition 2036, 4, :o2, 2090872800
-          tz.transition 2036, 9, :o1, 2106421200
+          tz.transition 2036, 10, :o1, 2109099600
           tz.transition 2037, 4, :o2, 2122322400
-          tz.transition 2037, 9, :o1, 2137957200
+          tz.transition 2037, 10, :o1, 2140635600
           tz.transition 2038, 4, :o2, 29586185, 12
-          tz.transition 2038, 9, :o1, 19725579, 8
+          tz.transition 2038, 10, :o1, 19725827, 8
           tz.transition 2039, 3, :o2, 29590553, 12
-          tz.transition 2039, 9, :o1, 19728499, 8
+          tz.transition 2039, 10, :o1, 19728747, 8
           tz.transition 2040, 4, :o2, 29595005, 12
-          tz.transition 2040, 9, :o1, 19731427, 8
+          tz.transition 2040, 10, :o1, 19731675, 8
           tz.transition 2041, 4, :o2, 29599373, 12
-          tz.transition 2041, 9, :o1, 19734347, 8
+          tz.transition 2041, 10, :o1, 19734595, 8
           tz.transition 2042, 4, :o2, 29603741, 12
-          tz.transition 2042, 9, :o1, 19737267, 8
+          tz.transition 2042, 10, :o1, 19737515, 8
           tz.transition 2043, 4, :o2, 29608109, 12
-          tz.transition 2043, 9, :o1, 19740187, 8
+          tz.transition 2043, 10, :o1, 19740435, 8
           tz.transition 2044, 3, :o2, 29612477, 12
-          tz.transition 2044, 9, :o1, 19743115, 8
+          tz.transition 2044, 10, :o1, 19743363, 8
           tz.transition 2045, 4, :o2, 29616929, 12
-          tz.transition 2045, 9, :o1, 19746035, 8
+          tz.transition 2045, 10, :o1, 19746283, 8
           tz.transition 2046, 4, :o2, 29621297, 12
-          tz.transition 2046, 9, :o1, 19748955, 8
+          tz.transition 2046, 10, :o1, 19749203, 8
           tz.transition 2047, 4, :o2, 29625665, 12
-          tz.transition 2047, 9, :o1, 19751875, 8
+          tz.transition 2047, 10, :o1, 19752123, 8
           tz.transition 2048, 4, :o2, 29630033, 12
-          tz.transition 2048, 9, :o1, 19754803, 8
+          tz.transition 2048, 10, :o1, 19755051, 8
           tz.transition 2049, 4, :o2, 29634401, 12
-          tz.transition 2049, 9, :o1, 19757723, 8
+          tz.transition 2049, 10, :o1, 19757971, 8
           tz.transition 2050, 3, :o2, 29638769, 12
-          tz.transition 2050, 9, :o1, 19760643, 8
+          tz.transition 2050, 10, :o1, 19760891, 8
         end
       end
     end
