@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v?????) - ??????????
+
+* Updated to tzdata version 2008h
+  (http://article.gmane.org/gmane.comp.time.tz/2377).
+
+
 == Version 0.3.11 (tzdata v2008g) - 7-Oct-2008
 
 * Updated to tzdata version 2008g
